Got location and weather working. Need to find a way to wait for weather information, then update string. Otherwise, blank text is used... We don't want this.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Suit Up</string>
+    <string name="location_placeholder">No Location</string>
+    <string name="get_location">Get Location</string>
+    <string name="weather_placeholder">No Weather</string>
+    <string name="get_weahter">Get Weather</string>
 </resources>
